--- a/css/index.css
+++ b/css/index.css
@@ -67,8 +67,8 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  font-size: 15px;
-  color: rgb(162, 2, 255);
+  font-size: 12px;
+  color: grey;
   cursor: pointer;
   transform: translate(-50%);
   background-color: white;
