--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
 .header {
   width: 100%;
   height: 75px;
-  background-color: #388E3C;
+  background-color: rgb(56, 142, 135);
   color: white;
   display: flex;
   justify-content: center;
@@ -67,8 +67,8 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  font-size: 12px;
-  color: grey;
+  font-size: 20px;
+  color: rgb(93, 46, 168);
   cursor: pointer;
   transform: translate(-50%);
   background-color: white;
@@ -86,11 +86,10 @@
   position: fixed;
   top: 75px;
   left: 0;
-  width: 350px;
+  width: 250px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
   background-color: #81C784;
-  border: 1px solid #004D40;
   border-left: none;
   border-bottom: none;
   z-index: 2;
